syntax = "proto3";
option java_package = "com.proto.user";
option java_multiple_files = true;
message CreateUserRequest {
  string name = 1;
  string email = 2;
  repeated string favourite_books = 3;
}
message GetUserByIdRequest {
  string id = 1;
}
message GetUserByNameRequest {
  string name = 1;
}
message GetUserByEmailRequest {
  string email = 1;
}
message User {
  string id = 1;
  string name = 2;
  string email = 3;
  repeated string favourite_books = 4;
  string role = 5;
}
service UserService {
  rpc createUser(CreateUserRequest) returns (User);
  rpc getUserById(GetUserByIdRequest) returns (User);
  rpc getUserByName(GetUserByNameRequest) returns (User);
  rpc getUserByEmail(GetUserByEmailRequest) returns (User);
}